tests/fixtures/invalid/divmod_bool_list.py
# Cannot call divmod() with Bool, List[int]
x = divmod(True, [1, 2, 3])
